--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,7 +20,7 @@
         <!--STYLES-->
         <link rel="stylesheet" href="/styles/css/animate.min.css">
         <link rel="stylesheet" href="/styles/css/bootstrap-social.css">
-        <link rel="stylesheet" href="/styles/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/styles/css/bootstrap.css">
         <link rel="stylesheet" href="/styles/css/intro.css">
         <link rel="stylesheet" href="/styles/css/theme.css">
         <link rel="stylesheet" href="/bower_components/nvd3/build/nv.d3.css">
@@ -60,7 +60,9 @@
         <%- body %>
 
         <!--SCRIPTS-->
+        <script src="/bower_components/jquery/dist/jquery.min.js"></script>
         <script src="/bower_components/angular/angular.js"></script>
+        <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
         <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
         <script src="/bower_components/sails.io.js/dist/sails.io.js"></script>
