--- a/assets/src/app/markets/index.tpl.html
+++ b/assets/src/app/markets/index.tpl.html
@@ -12,7 +12,8 @@
 
 	<h5>overlay percentage change</h5>
 	<nvd3 options='marketOptions' data='marketDataRenderRender'></nvd3>
-
+	<!--<p class="btn btn-default" ng-click="selectTime(5000,'BTC')">5sec</p>-->
+	<!--<p class="btn btn-default" ng-click="selectTime(30000,'BTC')">30sec</p>-->
 	<p class="btn btn-default" ng-click="selectTime(60000,'BTC')">1min</p>
 	<p class="btn btn-default" ng-click="selectTime(300000,'BTC')">5min</p>
 	<p class="btn btn-default" ng-click="selectTime(1800000,'BTC')">30min</p>
