--- a/.tmp/public/src/app/account/index.tpl.html
+++ b/.tmp/public/src/app/account/index.tpl.html
@@ -1,14 +1,18 @@
 <div class="container" style="text-align:left">
 	<h1>Account info</h1>
+    <h3><a href="member/{{currentUser.username}}">{{currentUser.username}}</a></h2><br>
 	<p>edit</p>
-	
 	<form role="form">
         <div class="form-group">
-            <input class="form-control" name="userName" placeholder="username" title="username" type="text"> 
+            <input class="form-control" name="userName" placeholder="username" title="username" type="text" ng-model="currentUser.username"> 
             <i class="fa fa-user"></i>
         </div>
         <div class="form-group">
-            <input class="form-control" name="firstName" placeholder="first name" title="first name" type="text"> 
+            <input class="form-control" name="firstName" placeholder="first name" title="first name" type="text" ng-model="currentUser.firstName"> 
+            <i class="fa fa-user"></i>
+        </div>
+        <div class="form-group">
+            <input class="form-control" name="lastName" placeholder="last name" title="last name" type="text" ng-model="currentUser.lastName"> 
             <i class="fa fa-user"></i>
         </div>
         <div class="align-right">
@@ -29,7 +33,7 @@
             <i class="fa fa-user"></i>
         </div>
         <div class="form-group">
-            <input class="form-control" name="apikey" placeholder="api key" title="api secret" type="text"> 
+            <input class="form-control" name="apikey" placeholder="api secret" title="api secret" type="text"> 
             <i class="fa fa-user"></i>
         </div>
         <div class="align-right">
