--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -169,11 +169,35 @@
 			<h1>market exposure</h1>
 			<!--<nvd3 options='options' data='data'></nvd3>-->
 			<br><br>
+
+
 			<div ng-repeat="pair in tradingPairs">
 				<div class="col-md-3 col-sm-4 col-xs-6 ">
 					<a href="market/{{pair.split('/')[1]}}/{{pair.split('/')[0]}}">{{pair.split('/')[1]}}/{{pair.split('/')[0]}}</a>
 				</div>
 			</div>
+
+			<!--<div class="col-md-4">
+				<table class="table table-inverse table-hover">
+				    <thead>
+						<tr>
+							<th>Market</th>
+							<th>Price</th>
+							<th>Percent Change</th>
+						</tr>
+				    </thead>
+				    <tbody>
+						<tr ng-repeat="pair in tradingPairs">
+							<td><a href="market/{{pair.split('/')[1]}}/{{pair.split('/')[0]}}">{{pair.split('/')[1]}}/{{pair.split('/')[0]}}</a></td>
+							<td>0</td>
+							<td>0</td>
+						</tr>
+				    </tbody>
+				</table>
+			</div>-->
+
+
+
 		</div>
 	</div>
 
@@ -184,7 +208,7 @@
 		<br><br><br>
 		<div class="container">
 			<h1>activity</h1>
-			<nvd3 options='marketOptions' data='marketGraphDataRender'></nvd3>
+			<div class="chartContainer"><nvd3 options='marketOptions' data='marketGraphDataRender'></nvd3></div>
 			<br>
 			<!--daily return vs index..-->
 			<!--<h4>sound and transparent investments</h4>-->
