--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -201,14 +201,13 @@
 			<!--<nvd3 options='options' data='data'></nvd3>-->
 			<br><br>
 
-
 			<div ng-repeat="pair in tradingPairs">
 				<div class="col-md-3 col-sm-4 col-xs-6 ">
 					<a href="market/{{pair.split('/')[1]}}/{{pair.split('/')[0]}}">{{pair.split('/')[1]}}/{{pair.split('/')[0]}}</a>
 				</div>
 			</div>
-
-			<!--<div class="col-md-4">
+			<!--
+			<div class="col-md-4">
 				<table class="table table-inverse table-hover">
 				    <thead>
 						<tr>
@@ -225,9 +224,8 @@
 						</tr>
 				    </tbody>
 				</table>
-			</div>-->
-
-
+			</div>
+			-->
 
 		</div>
 	</div>
@@ -241,14 +239,10 @@
 		<div class="container">
 			<h1>activity</h1>
 			<div class="chartContainer"><nvd3 options='marketOptions' data='marketGraphDataRender'></nvd3></div>
-			<!--<highchart id="chart1" config="chartConfig"></highchart>-->
+			<!--<highchart config="chartConfig"></highchart>-->
 			<br>
 			<!--daily return vs index..-->
 			<!--<h4>sound and transparent investments</h4>-->
-			<!--<h1>order book</h1><br>-->
-			<!--<div ng-repeat="order in orders">
-				<p><a style="color:gray" href="market/{{order.asset1}}/{{order.asset2}}">{{order.asset1}}/{{order.asset2}}</a> traded {{order.amount}} {{order.asset1}} for {{order.amount/order.price}} {{order.asset2}} at {{order.price}}: {{order.createdAt}}</p>
-			</div>-->
 		</div>
 	</div>
 	<div style="text-align:left;" class="container">
