--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,6 +15,7 @@
         <link rel="manifest" href="/favicons/manifest.json">
         <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#5bbad5">
         <link rel="shortcut icon" href="/favicons/favicon.ico">
+        <meta name="theme-color" content="#ffffff">
         <!--FAVICONS END-->
 
         <!--STYLES-->
