--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -282,36 +282,38 @@
 
 		<div style="background:url('https://source.unsplash.com/1600x900/?finance,code,data,forex')" class="imageContainerSmall">
             <div style="background:rgba(0,0,0,0.75)" class="imageContainerSmallDiv">  
-                <div style="margin-top: auto;margin-bottom: auto;">
+                <div style="margin-top: auto;margin-bottom: auto;text-align:center">
                     <div class="container">
-                        <h1 style="text-align:left;font-size:35px;color:rgba(255,255,255,0.9);font-weight:400;">Transparent Orders</h1>
-                        <h5 style="color:white;text-align:left">Accountability in Investment</h5>
+                        <h1 style=";font-size:35px;color:rgba(255,255,255,0.9);font-weight:400;">Transparent Orders</h1>
+                        <h5 style="color:white;">Accountability in Investment</h5>
                     </div>
                 </div>
             </div>
         </div>
 		<div class="spacing-10"></div>
-		<div style="padding:16px">
-			<table class="table table-inverse table-hover">
-			    <thead>
-					<tr>
-						<th>Market</th>
-						<th>Type</th>
-						<th></th>
-						<th></th>
-						<th>Date</th>
-					</tr>
-			    </thead>
-			    <tbody>
-					<tr ng-repeat="order in orders">
-						<td><a style="color:gray" href="market/{{order.asset1}}/{{order.asset2}}">{{order.asset1}}/{{order.asset2}}</a></td>
-						<td>{{order.type}}</td>
-						<td>{{order.amount}} {{order.asset2}}</td>
-						<td>{{order.price}} {{order.asset1}}</td>
-						<td>{{order.createdAt | date :  "y MM-dd hh:mm.ss a"}}</td>
-					</tr>
-			    </tbody>
-			</table>
+		<div class="">
+			<div style="padding:16px">
+				<table class="table table-inverse table-hover">
+				    <thead>
+						<tr>
+							<th>Market</th>
+							<th>Type</th>
+							<th></th>
+							<th></th>
+							<th>Date</th>
+						</tr>
+				    </thead>
+				    <tbody>
+						<tr ng-repeat="order in orders">
+							<td><a style="color:gray" href="market/{{order.asset1}}/{{order.asset2}}">{{order.asset1}}/{{order.asset2}}</a></td>
+							<td>{{order.type}}</td>
+							<td>{{order.amount}} {{order.asset2}}</td>
+							<td>{{order.price}} {{order.asset1}}</td>
+							<td>{{order.createdAt | date :  "y MM-dd hh:mm.ss a"}}</td>
+						</tr>
+				    </tbody>
+				</table>
+			</div>
 		</div>
 
 		<div class="spacing-50"></div>
