--- a/.tmp/public/src/app/nav/index.tpl.html
+++ b/.tmp/public/src/app/nav/index.tpl.html
@@ -89,7 +89,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/" ui-sref="home">
+            <a style="padding-left:10px" class="navbar-brand" href="/" ui-sref="home">
                 <!--<img src="images/tesseract.png" style="height:32px;float:left;margin-top:-3px;margin-right:10px">-->
                 CRE8.CAPITAL
             </a>
